Deleted extra files, added Queue and Stack